# liar

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  create_moths.sh  fib  fib.lir  fibbi  fibbi.lir  test_mut_vector2.ll
.github/workflows/: ci.yml
.moth/: .current  cocaw-stdlib-println.md  config.yml  diduk-stdlib-map.md  fabin-stdlib-print.md  fazos-stdlib-clamp.md  fered-stdlib-filter.md  fudec-stdlib-between?.md  galom-stdlib-comp.md  gobub-stdlib-nil?.md  govet-stdlib-cube.md  gurej-stdlib-fib-fast.md  hipup-stdlib-even?.md  jijit-stdlib-min.md  kamix-stdlib-pow.md  kezux-stdlib-reverse.md  kohur-stdlib-sign.md  lawen-stdlib-lcm.md  lunoh-stdlib-sum-to-fast.md  marux-stdlib-odd?.md  maxol-stdlib-cons.md  meguw-stdlib-gcd.md  misuf-stdlib-car.md  mudew-stdlib-pow-fast.md  nocev-stdlib-comp3.md  noriv-stdlib-divides?.md  nufaz-stdlib-flip.md  pehax-stdlib-factorial.md  poluw-stdlib-neg?.md  rubiw-stdlib-neg.md  rukif-stdlib-complement.md  sohar-stdlib-fib.md  sunon-stdlib-sum-to.md  tekep-stdlib-constantly.md  tizil-stdlib-length.md  tizow-stdlib-reduce.md  tunal-stdlib-zero?.md  tuzop-stdlib-identity.md  voxoh-stdlib-max.md  waluc-stdlib-cdr.md  (+2 more)
.moth/backlog/: buwol-low-length.md  bv3ow-med-add_shadowing_lint_clippy_like_for_liarliar_lia_r.md  cj5a8-med-liarliar_string_builder.md  dq07w-high-lir_atomic_load_store.md  drbxr-med-liarliar_type_inference.md  regif-low-cons.md  (+24 more)
cert/: Cargo.toml
doc/: LANGUAGE.md  LIAR.md  MEMORY_MODEL.md  lIR.md  stdll-gaps.md
ldn/: Cargo.toml
liar/: Cargo.toml
liar-cert/: Cargo.toml
liar-cert/features/: async.feature  closures.feature  conversions.feature  destructuring.feature  float.feature  instance.feature  io.feature  macros.feature  protocols.feature  simple.feature  stdlib.feature  struct-update.feature  structs.feature  tailcall.feature  variadic_macros.feature
liar-cert/src/: lib.rs
liar-cert/tests/: cert.rs  reader_new_features_test.rs  reader_simple_test.rs  reader_test.rs
liar-nrepl/: Cargo.toml
liar-nrepl/src/: main.rs
liar-repl/: Cargo.toml
liar-repl/src/: lib.rs  main.rs  session.rs
liar-runtime/: Cargo.toml
liar-runtime/src/: executor.rs  ffi.rs  lib.rs  task.rs  waker.rs
liar-runtime/src/io/: mod.rs
liar-runtime/src/reactor/: epoll.rs  kqueue.rs  mod.rs
liar-spec/: Cargo.toml
liar-spec/features/: arithmetic.feature  builtins_arithmetic.feature  builtins_arrays.feature  builtins_boolean_bitwise.feature  builtins_bytes.feature  builtins_comparisons.feature  builtins_conversions.feature  builtins_io.feature  builtins_ownership.feature  comparisons.feature  control_flow.feature  functions.feature  literals.feature  macros.feature  structs.feature  type_names.feature
liar-spec/src/: lib.rs
liar-spec/tests/: spec.rs
liar-vscode/: README.md  language-configuration.json  package.json  sample.liar
liar/src/: ast.rs  closures.rs  codegen.rs  error.rs  eval.rs  expand.rs  infer.rs  lexer.rs  lib.rs  lint.rs  loader.rs  macro_jit.rs  ownership.rs  parser.rs  resolve.rs  span.rs  types.rs
liar/src/closures/: analysis.rs  conversion.rs  escape.rs  mod.rs  safety.rs  types.rs
liar/src/codegen/: atoms.rs  builtins.rs  closures_codegen.rs  collections.rs  context.rs  control.rs  expr.rs  mod.rs  protocols.rs  structs.rs  tests.rs  types.rs
liarliar/: README.md  closures.liar  codegen.liar  env.liar  expand.liar  infer.liar  io.liar  main.liar  namespace.liar  ownership.liar  printer.liar  reader.liar  strings.liar  symbols.liar  test-closures.liar  test-codegen.liar  test-infer.liar  test-ownership.liar  test-stdlib-deps.liar  value.liar
lib/: array.liar  async.liar  hashmap.liar  hashset.liar  io.liar  liar.array.liar  liar.async.liar  liar.core.liar  liar.hashmap.liar  liar.hashset.liar  liar.io.liar  liar.mut-vector.liar  liar.prelude.liar  liar.runtime.core.liar  liar.runtime.liar  liar.runtime.linux.liar  liar.runtime.macos.liar  liar.runtime2.liar  liar.seq.liar  liar.stringmap.liar  liar.test.liar  liar.vector.liar  liarliar.value.liar  mut-vector.liar  runtime.liar  seq.liar  stdlib.liar  vector.liar
lir-cli/: Cargo.toml
lir-cli/src/: main.rs
lir-cli/tests/: cert.rs
lir-codegen/: Cargo.toml
lir-core/: Cargo.toml  README.md
lir-lair/: Cargo.toml
lir-lair/src/: args.rs  link.rs  main.rs
lir-repl/: Cargo.toml
lir-repl/src/: main.rs
scripts/: install-hooks.sh  pre-commit
(+318 files in other folders)
