[package]
name = "liar-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async runtime for liar - executor, reactor, and I/O primitives"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(target_os = "linux")'.dependencies]
# epoll is in libc

[target.'cfg(target_os = "macos")'.dependencies]
# kqueue is in libc
