[package]
name = "liar"
version = "0.1.0"
edition = "2021"
description = "liar compiler - borrow-checked Lisp to lIR"

[lib]
name = "liar"
path = "src/lib.rs"

[[bin]]
name = "liarc"
path = "src/bin/main.rs"

[[bin]]
name = "liar-lint"
path = "src/bin/liar-lint.rs"

[features]
default = []
jit-macros = ["lir-codegen", "inkwell"]

[dependencies]
lir-core = { path = "../lir-core" }
thiserror = "1.0"

# Optional dependencies for JIT-powered macro evaluation
lir-codegen = { path = "../lir-codegen", optional = true }
inkwell = { version = "0.7.0", features = ["llvm21-1"], optional = true }
