[package]
name = "lir-lair"
version = "0.1.0"
edition = "2021"
description = "lIR assembler - compiles lIR to native code"

[[bin]]
name = "lair"
path = "src/main.rs"

[dependencies]
lir-core = { path = "../lir-core" }
lir-codegen = { path = "../lir-codegen" }
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
anyhow = "1"
